--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Colt Steele",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
